# agentic-rag-eval-harness

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  scope.md  todo.md
.github/workflows/: eval_gate.yml
agent/: graph.py  nodes.py  state.py  tools.py
api/: main.py
corpus/: loader.py  vectorstore.py
dataset/: golden_v1.yaml  schema.py
docs/superpowers/plans/: 2026-06-24-rag-eval-harness.md
eval/: checkpoint_io.py  contracts.py  judge.py  patches.py  ragas_track.py  trajectory.py
regression/: gate.py  tracker.py
scripts/: break_agent.py  compare_trajectories.py  ingest_corpus.py  run_eval.py  run_smoke.py  score_ragas_offline.py
tests/: conftest.py
tests/agent/: test_graph.py
tests/corpus/: __init__.py  test_vectorstore.py
tests/dataset/: test_schema.py
tests/eval/: __init__.py  test_contracts.py  test_judge.py  test_ragas_track.py  test_trajectory.py
tests/regression/: test_gate.py  test_tracker.py
writeups/: 00-ownership-plan.md
