[project]
name = "rag-eval-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-google-vertexai>=2.0",
    "langchain-groq>=0.2",
    "langchain-huggingface>=0.1",
    "sentence-transformers>=3.0",
    "langchain-anthropic>=0.3",
    "langchain-chroma>=0.1",
    "langgraph>=0.2",
    "anthropic>=0.40",
    "ragas>=0.2",
    "deepeval>=1.4",
    "arxiv>=2.1",
    "langsmith>=0.1",
    "wandb>=0.18",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "datasets>=2.0",
    "scikit-learn>=1.5",
    "chromadb>=0.5",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "groq>=0.11",
    "torch>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
