[project]
name = "rag-eval-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-google-vertexai>=2.0,<3.0",
    "langchain-groq>=0.2,<0.3",
    "langchain-huggingface>=0.1,<0.2",
    "sentence-transformers>=3.0",
    "langchain-chroma>=0.1,<0.2",
    "langgraph>=0.2,<0.3",
    "langchain-openai>=0.2,<0.3",
    "ragas>=0.2",
    "arxiv>=2.1",
    "wandb>=0.18",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "datasets>=2.0",
    "scikit-learn>=1.5",
    "chromadb>=0.5",
    # onnxruntime is a transitive chromadb dep (unused at runtime — we embed via
    # sentence-transformers). 1.23+ prints a spurious GPU-discovery stderr warning
    # on import; cap below it. chromadb only requires >=1.14.1.
    "onnxruntime>=1.14.1,<1.23",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "groq>=0.11",
    "torch>=2.0",
    "pypdf>=4.0",
    "requests>=2.31",
    "langchain-google-genai>=2.1.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
